Atomia Public Order Page v13.3

2013-03-24 Ivan Kustera <ivan@atomia.com>

	- [IMPROVEMENT] Modified creating of new order to add MainDomain = true custom attribute for order line which is related to domain selected to be main.

2013-03-16 Ivan Kustera <ivan@atomia.com>

	- [NEW] Introduced product property NoWebsites which is used for setting all domain lines to provision CsDomainParking instead of website service.
	- [BUGFIX] Fixed handling of multiple setup fee products when preparing cart data.

2013-03-04 Ivan Kustera <ivan@atomia.com>

	- [BUGFIX] Fixed bug with empty countries dropdown list in case order submit fails
	
2013-02-12 Aleksandar Vukasinovic <vukasin@atomia.com>
	* New feature: WorldPay xml redirect payment method added.
	* New feature: Preselect packages