@@ -131,7 +131,8 @@ Collection of variables used for setting the language that will be used on the A
       <globalSetting name="DomainSearchTimeout" value="15" />
       <globalSetting name="HideUnavailableDomains" value="false"/>
       <globalSetting name="CurrencyCodesv-SE" value="SEK" />
-	  <globalSetting name="CurrencyCodeen-US" value="USD" />
+	    <globalSetting name="CurrencyCodeen-US" value="USD" />
+      <globalSetting name="AllowOwnDomain" value="true" />
 	  <!--<globalSetting name="AllowAddSubdomain" value="example.com" />-->
     </globalSettingsList>
     <webFramePlugins path="bin\Plugins" />
